--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Hungwell Art Services</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="scene-container"></div>
+
     <div id="menu-tray">
         <ul>
             <li id="services-menu">Services
@@ -53,7 +54,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/three@latest/build/three.min.js"></script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
