--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hungwell Art Services</title>
+    <title>Your Website Title</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,14 +13,14 @@
         <ul>
             <li id="services-menu">Services
                 <ul id="services-submenu">
-                    <li>Service 1</li>
-                    <li>Service 2</li>
-                    <li>Service 3</li>
-                    <li>Service 4</li>
-                    <li>Service 5</li>
-                    <li>Service 6</li>
-                    <li>Service 7</li>
-                    <li>Service 8</li>
+                    <li data-card="service-card-1">Service 1</li>
+                    <li data-card="service-card-2">Service 2</li>
+                    <li data-card="service-card-3">Service 3</li>
+                    <li data-card="service-card-4">Service 4</li>
+                    <li data-card="service-card-5">Service 5</li>
+                    <li data-card="service-card-6">Service 6</li>
+                    <li data-card="service-card-7">Service 7</li>
+                    <li data-card="service-card-8">Service 8</li>
                 </ul>
             </li>
             <li id="about-us-menu">About Us</li>
@@ -29,13 +29,20 @@
     </div>
 
     <div id="card-container">
-        <div id="services-card" class="card">
-            <h2>Services</h2>
-            <p>Content for services will go here.</p>
-        </div>
+        <!-- Individual Service Cards -->
+        <div id="service-card-1" class="card"><h2>Service 1</h2><p>Details about Service 1.</p></div>
+        <div id="service-card-2" class="card"><h2>Service 2</h2><p>Details about Service 2.</p></div>
+        <div id="service-card-3" class="card"><h2>Service 3</h2><p>Details about Service 3.</p></div>
+        <div id="service-card-4" class="card"><h2>Service 4</h2><p>Details about Service 4.</p></div>
+        <div id="service-card-5" class="card"><h2>Service 5</h2><p>Details about Service 5.</p></div>
+        <div id="service-card-6" class="card"><h2>Service 6</h2><p>Details about Service 6.</p></div>
+        <div id="service-card-7" class="card"><h2>Service 7</h2><p>Details about Service 7.</p></div>
+        <div id="service-card-8" class="card"><h2>Service 8</h2><p>Details about Service 8.</p></div>
+
+        <!-- About Us and Contact Cards -->
         <div id="about-us-card" class="card">
             <h2>About Us</h2>
-            <p>Content for about us will go here.</p>
+            <p>Details about the company.</p>
         </div>
         <div id="contact-us-card" class="card">
             <h2>Contact Us</h2>
