--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Hungwell Art Services</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="scene-container"></div>
 
+    <!-- Horizontal Menu -->
     <div id="menu-tray">
         <ul>
             <li id="services-menu">Services
                 <ul id="services-submenu">
-                    <li data-card="service-card-1">Service 1</li>
-                    <li data-card="service-card-2">Service 2</li>
-                    <li data-card="service-card-3">Service 3</li>
-                    <li data-card="service-card-4">Service 4</li>
-                    <li data-card="service-card-5">Service 5</li>
-                    <li data-card="service-card-6">Service 6</li>
-                    <li data-card="service-card-7">Service 7</li>
-                    <li data-card="service-card-8">Service 8</li>
+                    <li>Service 1</li>
+                    <li>Service 2</li>
+                    <li>Service 3</li>
+                    <li>Service 4</li>
+                    <li>Service 5</li>
+                    <li>Service 6</li>
+                    <li>Service 7</li>
+                    <li>Service 8</li>
                 </ul>
             </li>
             <li id="about-us-menu">About Us</li>
@@ -28,8 +29,8 @@
         </ul>
     </div>
 
+    <!-- Cards -->
     <div id="card-container">
-        <!-- Individual Service Cards -->
         <div id="service-card-1" class="card"><h2>Service 1</h2><p>Details about Service 1.</p></div>
         <div id="service-card-2" class="card"><h2>Service 2</h2><p>Details about Service 2.</p></div>
         <div id="service-card-3" class="card"><h2>Service 3</h2><p>Details about Service 3.</p></div>
@@ -39,7 +40,6 @@
         <div id="service-card-7" class="card"><h2>Service 7</h2><p>Details about Service 7.</p></div>
         <div id="service-card-8" class="card"><h2>Service 8</h2><p>Details about Service 8.</p></div>
 
-        <!-- About Us and Contact Cards -->
         <div id="about-us-card" class="card">
             <h2>About Us</h2>
             <p>Details about the company.</p>
