--- a/index.html
+++ b/index.html
@@ -12,18 +12,7 @@
     <!-- Horizontal Menu -->
     <div id="menu-tray">
         <ul>
-            <li id="services-menu">Services
-                <ul id="services-submenu">
-                    <li>Service 1</li>
-                    <li>Service 2</li>
-                    <li>Service 3</li>
-                    <li>Service 4</li>
-                    <li>Service 5</li>
-                    <li>Service 6</li>
-                    <li>Service 7</li>
-                    <li>Service 8</li>
-                </ul>
-            </li>
+            <li id="services-menu">Services</li>
             <li id="about-us-menu">About Us</li>
             <li id="contact-us-menu">Contact Us</li>
         </ul>
