--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
 
         <div id="about-us-card" class="card">
             <h2>About Us</h2>
-            <p>Details about the company.</p>
+            <p>I am an artist, curator, teacher and art handler.  I have 20 years of comprehensive experience facilitating the organization, curation and installation of art events.  I have hung or installed many different types of art with values well exceeding seven figures.  I have installed works in many different types of settings that include private homes, galleries, art fairs and businesses.  I have worked for and with organizations like Christie’s Auction House in Rockefeller Center, The Green Project in New Orleans and Frank’s Chop Shop in Rochester.  I have been with the Yards Art Collective since 2020. 
+
+I offer the following services to assist in the various necessary steps to a successful art show.  This is an ‘a la carte’ menu designed to help you receive exactly the services you need to have a great event.  I can be as involved or uninvolved as you like in this process.  
+
+Prices vary per service. If interested, an estimate is generated based on the amount of menu items and the size of the task.  Reduced prices are considered when compiling multiple tasks. This service is designed to fit the individual needs of anyone looking for assistance with hanging artwork in a space or coordinating an event focused around the visual arts.
+</p>
         </div>
         <div id="contact-us-card" class="card">
             <h2>Contact Us</h2>
