--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Cards -->
-    <div id="card-container">
+    <div id="card-container" style="display: flex; flex-wrap: wrap; justify-content: center;">
         <div id="service-card-1" class="card"><h2>Service 1</h2><p>Details about Service 1.</p></div>
         <div id="service-card-2" class="card"><h2>Service 2</h2><p>Details about Service 2.</p></div>
         <div id="service-card-3" class="card"><h2>Service 3</h2><p>Details about Service 3.</p></div>
