--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li id="services-menu">Services
                 <ul id="services-submenu">
-                    <li>Service 1</li>
+                    <li>Installation + Curation</li>
                     <li>Service 2</li>
                     <li>Service 3</li>
                     <li>Service 4</li>
@@ -31,7 +31,24 @@
 
     <!-- Cards -->
     <div id="card-container" style="display: flex; flex-wrap: wrap; justify-content: center;">
-        <div id="service-card-1" class="card"><h2>Service 1</h2><p>Details about Service 1.</p></div>
+        <div id="service-card-1" class="card"><h2>Installation + Curation</h2><p><h3>Installation</h3><br>
+            I can fully install your artwork in a gallery, home or office based on your specifications. Most hardware is provided with the exception of
+            specialized installation materials.  The price of installation is contingent on the estimated amount of hours to install.  In the event that
+            hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
+            the estimate.<br>
+            Price:  50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br><br>
+            <h3>Curation</h3><br>
+            I am always very happy to offer my input and advice on how or where work should be hung.  I’m also happy to help you make choices and lay out
+            a show. I find those conversations very fun. It’s my favorite part. If I am asked to independently make the choices about where works are to
+            be installed in a space I request a curation fee.  The curation fee is only applicable to events and not private homes or businesses.
+            Price:  The curation fee is 10.00 per each work hung.  For example, if I curate 9 works, the curation fee is 90.00.<br>
+            <h3>Deinstallation</h3><br>
+            Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
+            Price: 50.00 per hour<br><br>
+            <h3>Packaging</h3><br>
+            Art works can be professionally packaged on site for storage or transport.<br>
+            Price:  15.00 per artworks under 3’x3’
+            20.00 per artworks larger than 3’x3’</p></div>
         <div id="service-card-2" class="card"><h2>Service 2</h2><p>Details about Service 2.</p></div>
         <div id="service-card-3" class="card"><h2>Service 3</h2><p>Details about Service 3.</p></div>
         <div id="service-card-4" class="card"><h2>Service 4</h2><p>Details about Service 4.</p></div>
