--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
             specialized installation materials.  The price of installation is contingent on the estimated amount of hours to install.  In the event that
             hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
             the estimate.<br>
-            Price:  50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
+            <b>Price:</b>50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung.  I’m also happy to help you make choices and lay out
             a show. I find those conversations very fun. It’s my favorite part. If I am asked to independently make the choices about where works are to
             be installed in a space I request a curation fee.  The curation fee is only applicable to events and not private homes or businesses.
-            Price:  The curation fee is 10.00 per each work hung.  For example, if I curate 9 works, the curation fee is 90.00.<br>
+            <b>Price:</b>The curation fee is 10.00 per each work hung.  For example, if I curate 9 works, the curation fee is 90.00.<br>
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
-            Price: 50.00 per hour<br>
+            <b>Price:</b> 50.00 per hour<br>
             <h3>Packaging</h3>
             Art works can be professionally packaged on site for storage or transport.<br>
-            Price:  15.00 per artworks under 3’x3’
+            <b>Price:</b>15.00 per artworks under 3’x3’
             20.00 per artworks larger than 3’x3’</p></div>
         <div id="service-card-2" class="card"><h2>Service 2</h2><p>Details about Service 2.</p></div>
         <div id="service-card-3" class="card"><h2>Service 3</h2><p>Details about Service 3.</p></div>
