--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="scene-container"></div>
+    <div id="static-bg-image"></div>
+    <div id="scene-container"></div>     
 
     <!-- Horizontal Menu -->
     <div id="menu-tray">
