--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <ul>
             <li id="services-menu">Services
                 <ul id="services-submenu">
-                    <li>Installation + Curation</li>
-                    <li>Service 2</li>
-                    <li>Service 3</li>
-                    <li>Service 4</li>
-                    <li>Service 5</li>
-                    <li>Service 6</li>
-                    <li>Service 7</li>
-                    <li>Service 8</li>
+                    <li>Installation</li>
+                    <li>Curation & Packaging</li>
+                    <li>Tags</li>
+                    <li>Sales</li>
+                    <li>Provenance</li>
+                    <li>Proposals & Grant Writing</li>
+                    <li>Promotions</li>
+                    <li>Framing & Stretching</li>
                 </ul>
             </li>
             <li id="about-us-menu">About Us</li>
@@ -38,25 +38,25 @@
             hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
             the estimate.<br>
             <b>Price:</b>50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
-            <h3>Curation</h3>
+            <h3>Deinstallation</h3>
+            Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
+            <b>Price:</b> 50.00 per hour<br>
+            <div id="service-card-2" class="card"><h2>Service 2</h2><p>Curation & Packaging</p></div>
+        <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung.  I’m also happy to help you make choices and lay out
             a show. I find those conversations very fun. It’s my favorite part. If I am asked to independently make the choices about where works are to
             be installed in a space I request a curation fee.  The curation fee is only applicable to events and not private homes or businesses.
             <b>Price:</b>The curation fee is 10.00 per each work hung.  For example, if I curate 9 works, the curation fee is 90.00.<br>
-            <h3>Deinstallation</h3>
-            Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
-            <b>Price:</b> 50.00 per hour<br>
             <h3>Packaging</h3>
             Art works can be professionally packaged on site for storage or transport.<br>
             <b>Price:</b>15.00 per artworks under 3’x3’
             20.00 per artworks larger than 3’x3’</p></div>
-        <div id="service-card-2" class="card"><h2>Service 2</h2><p>Details about Service 2.</p></div>
-        <div id="service-card-3" class="card"><h2>Service 3</h2><p>Details about Service 3.</p></div>
-        <div id="service-card-4" class="card"><h2>Service 4</h2><p>Details about Service 4.</p></div>
-        <div id="service-card-5" class="card"><h2>Service 5</h2><p>Details about Service 5.</p></div>
-        <div id="service-card-6" class="card"><h2>Service 6</h2><p>Details about Service 6.</p></div>
-        <div id="service-card-7" class="card"><h2>Service 7</h2><p>Details about Service 7.</p></div>
-        <div id="service-card-8" class="card"><h2>Service 8</h2><p>Details about Service 8.</p></div>
+        <div id="service-card-3" class="card"><h2>Service 3</h2><p>Tags</p></div>
+        <div id="service-card-4" class="card"><h2>Service 4</h2><p>Sales</p></div>
+        <div id="service-card-5" class="card"><h2>Service 5</h2><p>Provenance.</p></div>
+        <div id="service-card-6" class="card"><h2>Service 6</h2><p>Proposals & Grant Writing</p></div>
+        <div id="service-card-7" class="card"><h2>Service 7</h2><p>Promotions</p></div>
+        <div id="service-card-8" class="card"><h2>Service 8</h2><p>Framing & Stretching</p></div>
 
         <div id="about-us-card" class="card">
             <h2>About Us</h2>
