--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <b>Price:</b>50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
-            <b>Price:</b> 50.00 per hour<br>
-            <div id="service-card-2" class="card"><h2>Service 2</h2><p>Curation & Packaging</p></div>
-        <h3>Curation</h3>
+            <b>Price:</b> 50.00 per hour<br></p></div>
+        <div id="service-card-2" class="card"><h2>Service 2</h2><p>Curation & Packaging</p></div>
+            <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung.  I’m also happy to help you make choices and lay out
             a show. I find those conversations very fun. It’s my favorite part. If I am asked to independently make the choices about where works are to
             be installed in a space I request a curation fee.  The curation fee is only applicable to events and not private homes or businesses.
