--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     <!-- Cards -->
     <div id="card-container" style="display: flex; flex-wrap: wrap; justify-content: center;">
-        <div id="service-card-1" class="card"><h2>Installation + Curation</h2><p><h3>Installation</h3>
+        <div id="service-card-1" class="card"><h2>Installation + Curation</h2><p>
+            <h3>Installation</h3>
             I can fully install your artwork in a gallery, home or office based on your specifications. Most hardware is provided with the exception of
             specialized installation materials.  The price of installation is contingent on the estimated amount of hours to install.  In the event that
             hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
@@ -41,7 +42,7 @@
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
             <b>Price:</b> 50.00 per hour<br></p></div>
-        <div id="service-card-2" class="card"><h2>Service 2</h2><p>Curation & Packaging</p></div>
+        <div id="service-card-2" class="card"><h2>Service 2</h2><p>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung.  I’m also happy to help you make choices and lay out
             a show. I find those conversations very fun. It’s my favorite part. If I am asked to independently make the choices about where works are to
@@ -51,12 +52,12 @@
             Art works can be professionally packaged on site for storage or transport.<br>
             <b>Price:</b>15.00 per artworks under 3’x3’
             20.00 per artworks larger than 3’x3’</p></div>
-        <div id="service-card-3" class="card"><h2>Service 3</h2><p>Tags</p></div>
-        <div id="service-card-4" class="card"><h2>Service 4</h2><p>Sales</p></div>
-        <div id="service-card-5" class="card"><h2>Service 5</h2><p>Provenance.</p></div>
-        <div id="service-card-6" class="card"><h2>Service 6</h2><p>Proposals & Grant Writing</p></div>
-        <div id="service-card-7" class="card"><h2>Service 7</h2><p>Promotions</p></div>
-        <div id="service-card-8" class="card"><h2>Service 8</h2><p>Framing & Stretching</p></div>
+        <div id="service-card-3" class="card"><h2>Tags</h2><p>Tags text</p></div>
+        <div id="service-card-4" class="card"><h2>Sales</h2><p>Sales text</p></div>
+        <div id="service-card-5" class="card"><h2>Provenance</h2><p>Provenance text</p></div>
+        <div id="service-card-6" class="card"><h2>Proposals & Grant Writing</h2><p>Proposals & Grant Writing text</p></div>
+        <div id="service-card-7" class="card"><h2>Promotions</h2><p>Promotions text</p></div>
+        <div id="service-card-8" class="card"><h2>Framing & Stretching</h2><p>Framing & Stretching text</p></div>
 
         <div id="about-us-card" class="card">
             <h2>About Us</h2>
