--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li id="services-menu">Services
                 <ul id="services-submenu">
                     <li>Installation</li>
-                    <li>Curation & Packaging</li>
+                    <li>Curation, Packaging</li>
                     <li>Tags</li>
                     <li>Sales</li>
                     <li>Provenance</li>
@@ -42,7 +42,7 @@
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
             <b>Price:</b> 50.00 per hour<br></p></div>
-        <div id="service-card-2" class="card"><h2>Service 2</h2><p>
+        <div id="service-card-2" class="card"><h2>Curation, Packaging</h2><p>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung.  I’m also happy to help you make choices and lay out
             a show. I find those conversations very fun. It’s my favorite part. If I am asked to independently make the choices about where works are to
