--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li id="services-menu">Services
                 <ul id="services-submenu">
-                    <li>Installation</li>
+                    <li>Installation & De-Installation</li>
                     <li>Curation, Packaging</li>
                     <li>Tags</li>
                     <li>Sales</li>
@@ -32,32 +32,82 @@
 
     <!-- Cards -->
     <div id="card-container" style="display: flex; flex-wrap: wrap; justify-content: center;">
-        <div id="service-card-1" class="card"><h2>Installation + Curation</h2><p>
+        <div id="service-card-1" class="card"><h2>Installation & De-Installation</h2><p>
             <h3>Installation</h3>
             I can fully install your artwork in a gallery, home or office based on your specifications. Most hardware is provided with the exception of
             specialized installation materials.  The price of installation is contingent on the estimated amount of hours to install.  In the event that
             hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
             the estimate.<br>
-            <b>Price:</b>50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
+            <u><b>Price:</b></u>u>50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
+            <hr>
             <h3>Deinstallation</h3>
-            Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
+            Deinstallation is significantly easier and can typically be achieved in under an hour.<br
             <b>Price:</b> 50.00 per hour<br></p></div>
         <div id="service-card-2" class="card"><h2>Curation, Packaging</h2><p>
             <h3>Curation</h3>
-            I am always very happy to offer my input and advice on how or where work should be hung.  I’m also happy to help you make choices and lay out
+            I am always very happy to offer my input and advice on how or where work should be hung. I’m also happy to help you make choices and lay out
             a show. I find those conversations very fun. It’s my favorite part. If I am asked to independently make the choices about where works are to
-            be installed in a space I request a curation fee.  The curation fee is only applicable to events and not private homes or businesses.
-            <b>Price:</b>The curation fee is 10.00 per each work hung.  For example, if I curate 9 works, the curation fee is 90.00.<br>
+            be installed in a space I request a curation fee.  The curation fee is only applicable to events and not private homes or businesses.<br>
+            <b><u>Price:</b></u>The curation fee is 10.00 per each work hung.  For example, if I curate 9 works, the curation fee is 90.00.<br>
+            <hr>
             <h3>Packaging</h3>
             Art works can be professionally packaged on site for storage or transport.<br>
-            <b>Price:</b>15.00 per artworks under 3’x3’
+            <u><b>Price:</b></u>15.00 per artworks under 3’x3’
             20.00 per artworks larger than 3’x3’</p></div>
-        <div id="service-card-3" class="card"><h2>Tags</h2><p>Tags text</p></div>
-        <div id="service-card-4" class="card"><h2>Sales</h2><p>Sales text</p></div>
-        <div id="service-card-5" class="card"><h2>Provenance</h2><p>Provenance text</p></div>
-        <div id="service-card-6" class="card"><h2>Proposals & Grant Writing</h2><p>Proposals & Grant Writing text</p></div>
-        <div id="service-card-7" class="card"><h2>Promotions</h2><p>Promotions text</p></div>
-        <div id="service-card-8" class="card"><h2>Framing & Stretching</h2><p>Framing & Stretching text</p></div>
+        <div id="service-card-3" class="card"><h2>Tags</h2><p>
+            <h3>Tags</h3>
+            I curate many of my own shows and in this capacity have developed a system of google forms and docs for documenting the artists,
+            the art works and the movement of the work from the artist to the gallery to the buyer or back to the artist. This is also a system
+            I use to create tags for a show. This can be a time consuming and complicated task. If you are hosting a large group show and do not
+            have a system of your own, I strongly recommend you consider this service. I do not recommend this option for exhibitions of three
+            or less people.<br>
+            <b><u>Price:</b></u>The price is considered based on the amount of artists and the amount of works in the exhibition. On average I ask
+            for 10.00 per artwork and my hourly rate to develop the documents and track the work throughout the month.
+        </p></div>
+        <div id="service-card-4" class="card"><h2>Sales</h2><p>
+            Assistance with sales refers to assistance with the organizational aspect of sales, not the act of promoting the work or convincing buyers. 
+            It is a system of google forms and QR codes for collecting information from buyers, documenting payments, organizing delivery or providing
+            receipts (or provenance) for the buyer. I use a system of posted QR codes for preferred payment methods and a google form to collect
+            documentation that makes it easy for purchasers to buy work.<br>
+            <b><u>Price:</b></u>Sales forms for individual shows can be created at a rate of 80.00 for the show. You can then monitor your own sales
+            or sales can be monitored by me at a rate of 10.00 per artwork applicable only if the work sells.
+        </p></div>
+        <div id="service-card-5" class="card"><h2>Provenance</h2><p>
+            Provenance is an incredibly important and often overlooked element of an art show. Provenance provides a documented history of the artwork
+            that dramatically impacts the value of the work over time.  A fellow art handler once said to me “Art is like baseball cards for rich people.”
+            Provenance is the stats on the back of the card. Individual provenance of each piece can be created and shared in a digital, printable format.<br>
+            <b><u>Price:</b></u>10.00 per artwork if photos of the work are provided or not desired.  
+            15.00 per artwork to provide photos.
+        </p></div>
+        <div id="service-card-6" class="card"><h2>Proposals & Grant Writing</h2><p>
+            Along with the nuts and bolts of facilitating a show, I am experienced in the abstract of developing them. I have written grants, curriculums,
+            project proposals and programming that has been implemented by myself or others into actionable events. A full list is available on request.<br>
+            <b><u>Price:</b></u>I can assist by consulting, planning or generating content at a rate of 50.00  per hour.<br>
+        </p></div>
+        <div id="service-card-7" class="card"><h2>Promotions</h2><p>
+            <h3>Press Release</h3>
+            As a First Friday venue, shows opening on First Friday appear on firstfridayrochester.org website. You are welcome to generate this release yourself,
+            but if you would like assistance I am able to create a multi-purpose press release for you.<br>
+            <b><u>Price:</b></u>80.00
+            <hr>
+            <h3>Fliers</h3>
+            I can generate promotional fliers in multiple dimensions to fit different digital platforms or to print and distribute. I do not offer printing
+            services at this time. Fliers and videos come with appropriate hashtags, descriptions and suggested collaborations.  If you are a person who is not
+            super experienced in social media, these are valuable tools to exploit in promoting your event.<br>
+            <b><u>Price:</b></u>80.00, 50.00 each additional promotional image
+            <hr>
+            <h3>Videos</h3>
+            The future is video and all of us creators of static images are super bummed by it.  I can make you fun videos to promote your work on platforms like
+            TikTok and Instagram Reels.<br>
+            <b><u>Price:</b></u>80.00            
+        </p></div>
+        <div id="service-card-8" class="card"><h2>Framing & Stretching</h2><p>
+            I can prepare art works for presentation in a variety of ways.  My expertise in this arena is in problem solving and constructing creative, affordable
+            solutions for displaying art.  I have helped countless artists find presentation solutions for their work through the construction of unique frames,
+            podiums, structures and installations.  A significant part of my own artistic practice has been about the exploration of reclaimed materials and many
+            of my solutions are informed by this experience.<br>
+            <b><u>Price:</b></u>Cost of Materials + 50.00/hr labor <br>
+        </p></div>
 
         <div id="about-us-card" class="card">
             <h2>About Us</h2>
