--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             specialized installation materials.  The price of installation is contingent on the estimated amount of hours to install.  In the event that
             hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
             the estimate.<br>
-            <u><b>Price:</b></u>u> 50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
+            <u><b>Price:</b></u> 50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
             <hr>
             <h3>Deinstallation</h3>
-            Deinstallation is significantly easier and can typically be achieved in under an hour.<br
-            <b>Price:</b> 50.00 per hour<br></p></div>
+            Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
+            <u><b>Price:</b></u> 50.00 per hour<br></p></div>
         <div id="service-card-2" class="card"><h2>Curation, Packaging</h2><p>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung. I’m also happy to help you make choices and lay out
@@ -52,7 +52,7 @@
             <hr>
             <h3>Packaging</h3>
             Art works can be professionally packaged on site for storage or transport.<br>
-            <u><b>Price:</b></u> 15.00 per artworks under 3’x3’
+            <u><b>Price:</b></u> 15.00 per artworks under 3’x3’<br>
             20.00 per artworks larger than 3’x3’</p></div>
         <div id="service-card-3" class="card"><h2>Tags</h2><p>
             I curate many of my own shows and in this capacity have developed a system of google forms and docs for documenting the artists,
