--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <hr>
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
-            <u><b>Price:</b></u> 50.00 per hour<br></p></div>
+            <u><b>Price:</b></u> 50.00 per hour<br>
+            <img src="installation.png" alt="Description" style="width: 100%; height: 50px;"></p></div>
         <div id="service-card-2" class="card"><h2>Curation, Packaging</h2><p>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung. I’m also happy to help you make choices and lay out
