--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
             <u><b>Price:</b></u> 50.00 per hour<br>
-            <img src="installation.png" alt="Description" style="width: 100%; height: 50px;"></p></div>
+            <img src="installation.png" alt="Description" style="width: 100%; height: 100px;"></p></div>
         <div id="service-card-2" class="card"><h2>Curation, Packaging</h2><p>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung. I’m also happy to help you make choices and lay out
@@ -107,6 +107,8 @@
             podiums, structures and installations.  A significant part of my own artistic practice has been about the exploration of reclaimed materials and many
             of my solutions are informed by this experience.<br>
             <b><u>Price:</b></u> Cost of Materials + 50.00/hr labor <br>
+            <img src="stretching.png" alt="Description" style="width: 50%; height: 100px;">
+            <img src="framing.png" alt="Description" style="width: 50%; height: 100px;">
         </p></div>
 
         <div id="about-us-card" class="card">
