--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
             <u><b>Price:</b></u> 50.00 per hour<br>
-            <img src="installation.png" alt="Description" style="width: 100%; height: 100px;"></p></div>
+            <img src="installation.png" alt="Description" style="width: 100%; height: 150px;"></p></div>
         <div id="service-card-2" class="card"><h2>Curation, Packaging</h2><p>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung. I’m also happy to help you make choices and lay out
@@ -107,19 +107,21 @@
             podiums, structures and installations.  A significant part of my own artistic practice has been about the exploration of reclaimed materials and many
             of my solutions are informed by this experience.<br>
             <b><u>Price:</b></u> Cost of Materials + 50.00/hr labor <br>
-            <img src="stretching.png" alt="Description" style="width: 50%; height: 100px;">
-            <img src="framing.png" alt="Description" style="width: 50%; height: 100px;">
+            <img src="stretching.png" alt="Description" style="width: 50%; height: 200px;">
+            <img src="framing1.png" alt="Description" style="width: 50%; height: 200px;">
         </p></div>
 
         <div id="about-us-card" class="card">
             <h2>About Us</h2>
-            <p>I am an artist, curator, teacher and art handler.  I have 20 years of comprehensive experience facilitating the organization, curation and installation of art events.  I have hung or installed many different types of art with values well exceeding seven figures.  I have installed works in many different types of settings that include private homes, galleries, art fairs and businesses.  I have worked for and with organizations like Christie’s Auction House in Rockefeller Center, The Green Project in New Orleans and Frank’s Chop Shop in Rochester.  I have been with the Yards Art Collective since 2020. 
-
-I offer the following services to assist in the various necessary steps to a successful art show.  This is an ‘a la carte’ menu designed to help you receive exactly the services you need to have a great event.  I can be as involved or uninvolved as you like in this process.  
-
-Prices vary per service. If interested, an estimate is generated based on the amount of menu items and the size of the task.  Reduced prices are considered when compiling multiple tasks. This service is designed to fit the individual needs of anyone looking for assistance with hanging artwork in a space or coordinating an event focused around the visual arts.
-</p>
-        </div>
+            <p>20 years of comprehensive experience facilitating the organization, curation, and installation of art events.
+                I have hung or installed many different types of art (values > $1million) in various settings including: 
+                galleries, private residences, art fairs, and businesses.<br><br>
+                Worked with organizations like:<br>
+                - Christie’s Auction House Rockefeller Center (NYC)<br>
+                - The Green Project (New Orleans, LA)<br>
+                - Frank’s Chop Shop (Rochester, NY)<br>
+                - The Dewey Endowment for Writing, Creative Representation, and Expressive Works (Virginia Beach, VA)<br>
+                - Yards Art Collective (Rochester, NY) </p></div>
         <div id="contact-us-card" class="card">
             <h2>Contact Us</h2>
             <form id="contact-form">
