--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
             the estimate.<br>
             <u><b>Price:</b></u> 50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
+            <img src="installation.png" alt="Description" style="width: 100%; height: 150px;"></p></div>
             <hr>
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
             <u><b>Price:</b></u> 50.00 per hour<br>
-            <img src="installation.png" alt="Description" style="width: 100%; height: 150px;"></p></div>
         <div id="service-card-2" class="card"><h2>Curation, Packaging</h2><p>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung. I’m also happy to help you make choices and lay out
@@ -76,9 +76,9 @@
             Provenance is an incredibly important and often overlooked element of an art show. Provenance provides a documented history of the artwork
             that dramatically impacts the value of the work over time.  A fellow art handler once said to me “Art is like baseball cards for rich people.”
             Provenance is the stats on the back of the card. Individual provenance of each piece can be created and shared in a digital, printable format.<br>
-            <b><u>Price:</b></u> 10.00 per artwork if photos of the work are provided or not desired.  
-            15.00 per artwork to provide photos.
-        </p></div>
+            <b><u>Price:</b></u> 15.00 per artwork (photos included)<br>
+            10.00 per artwork (no photos)  
+             </p></div>
         <div id="service-card-6" class="card"><h2>Proposals & Grant Writing</h2><p>
             Along with the nuts and bolts of facilitating a show, I am experienced in the abstract of developing them. I have written grants, curriculums,
             project proposals and programming that has been implemented by myself or others into actionable events. A full list is available on request.<br>
@@ -91,9 +91,8 @@
             <b><u>Price:</b></u> 80.00
             <hr>
             <h3>Fliers</h3>
-            I can generate promotional fliers in multiple dimensions to fit different digital platforms or to print and distribute. I do not offer printing
-            services at this time. Fliers and videos come with appropriate hashtags, descriptions and suggested collaborations.  If you are a person who is not
-            super experienced in social media, these are valuable tools to exploit in promoting your event.<br>
+            Available in multiple dimensions to fit different digital platforms or to print and distribute. I do not offer printing
+            services at this time. Fliers come with appropriate hashtags, descriptions and suggested collaborations.<br>
             <b><u>Price:</b></u> 80.00, 50.00 each additional promotional image
             <hr>
             <h3>Videos</h3>
@@ -107,8 +106,8 @@
             podiums, structures and installations.  A significant part of my own artistic practice has been about the exploration of reclaimed materials and many
             of my solutions are informed by this experience.<br>
             <b><u>Price:</b></u> Cost of Materials + 50.00/hr labor <br>
-            <img src="stretching.png" alt="Description" style="width: 50%; height: 200px;">
-            <img src="framing1.png" alt="Description" style="width: 50%; height: 200px;">
+            <img src="stretching.png" alt="Description" style="width: 150px; height: 200px;">
+            <img src="framing1.png" alt="Description" style="width: 150px; height: 200px;">
         </p></div>
 
         <div id="about-us-card" class="card">
