--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
             the estimate.<br>
             <u><b>Price:</b></u> 50.00 an hour.  I can hang approximately 10 works in an hour depending on what they are.<br>
-            <img src="installation.png" alt="Description" style="width: 100%; height: 150px;"></p></div>
+            <img src="installation.png" alt="Description" style="width: 100%; height: 150px;">
             <hr>
             <h3>Deinstallation</h3>
             Deinstallation is significantly easier and can typically be achieved in under an hour.<br>
-            <u><b>Price:</b></u> 50.00 per hour<br>
+            <u><b>Price:</b></u> 50.00 per hour<br></p></div>
         <div id="service-card-2" class="card"><h2>Curation, Packaging</h2><p>
             <h3>Curation</h3>
             I am always very happy to offer my input and advice on how or where work should be hung. I’m also happy to help you make choices and lay out
