--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="card-container" style="display: flex; flex-wrap: wrap; justify-content: center;">
         <div id="service-card-1" class="card"><h2>Installation & De-Installation</h2><p>
             <h3>Installation</h3>
-            I can fully install your artwork in a gallery, home or office based on your specifications. Most hardware is provided with the exception of
+            Fully install your artwork in a gallery, home, or office - based on your specifications. Most hardware is provided with the exception of
             specialized installation materials.  The price of installation is contingent on the estimated amount of hours to install.  In the event that
             hand delivery is necessary (meaning I am going somewhere to pick up art or physically bringing art somewhere for you), travel is included in
             the estimate.<br>
@@ -53,14 +53,14 @@
             <hr>
             <h3>Packaging</h3>
             Art works can be professionally packaged on site for storage or transport.<br>
-            <u><b>Price:</b></u> 15.00 per artworks under 3’x3’<br>
-            20.00 per artworks larger than 3’x3’</p></div>
+            <u><b>Price per artwork:</b></u> Under 3’x3’ - 15.00 each<br>
+            Larger than 3’x3’ - 20.00 each</p></div>
         <div id="service-card-3" class="card"><h2>Tags</h2><p>
             I curate many of my own shows and in this capacity have developed a system of google forms and docs for documenting the artists,
             the art works and the movement of the work from the artist to the gallery to the buyer or back to the artist. This is also a system
             I use to create tags for a show. This can be a time consuming and complicated task. If you are hosting a large group show and do not
-            have a system of your own, I strongly recommend you consider this service. I do not recommend this option for exhibitions of three
-            or less people.<br>
+            have a system of your own, I strongly recommend you consider this service.<br> 
+            <i>Not recommend this option for exhibitions of three people or fewer.</i><br>
             <b><u>Price:</b></u> The price is considered based on the amount of artists and the amount of works in the exhibition. On average I ask
             for 10.00 per artwork and my hourly rate to develop the documents and track the work throughout the month.
         </p></div>
@@ -116,25 +116,14 @@
                 I have hung or installed many different types of art (values > $1million) in various settings including: 
                 galleries, private residences, art fairs, and businesses.<br><br>
                 Worked with organizations like:<br>
-                - Christie’s Auction House Rockefeller Center (NYC)<br>
-                - The Green Project (New Orleans, LA)<br>
-                - Frank’s Chop Shop (Rochester, NY)<br>
-                - The Dewey Endowment for Writing, Creative Representation, and Expressive Works (Virginia Beach, VA)<br>
-                - Yards Art Collective (Rochester, NY) </p></div>
+                - <b><i>Christie’s Auction House - Rockefeller Center</i> (NYC)</b><br>
+                - <b><i>The Green Project </i>(New Orleans, LA)</b><br>
+                - <b><i>Frank’s Chop Shop </i>(Rochester, NY)</b><br>
+                - <b><i>The Yards Art Collective</i> (Rochester, NY)</b><br>
+                - <b><i>The Dewey Endowment for Writing, Creative Representation, and Expressive Works </i>(Virginia Beach, VA)</b>
+                 </p></div>
         <div id="contact-us-card" class="card">
-            <h2>Contact Us</h2>
-            <form id="contact-form">
-                <input type="text" id="name" placeholder="Your Name" required><br>
-                <input type="tel" id="phone" placeholder="Your Phone Number"><br>
-                <input type="email" id="email" placeholder="Your Email" required><br>
-                <select id="service-type">
-                    <option value="">Select a Service</option>
-                    <option value="service1">Service Type 1</option>
-                    <option value="service2">Service Type 2</option>
-                </select><br>
-                <textarea id="notes" placeholder="Additional Notes"></textarea><br>
-                <button type="submit">Submit</button>
-            </form>
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN5JThh9hboiCTqLQVzzNqNLVO8n0AqLEsxLY9_Z5EXrfx0w/viewform?embedded=true" width="300" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </div>
 
