--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                 I have hung or installed many different types of art (values > $1million) in various settings including: 
                 galleries, private residences, art fairs, and businesses.<br><br>
                 Worked with organizations like:<br>
-                - <b><i>Christie’s Auction House - Rockefeller Center</i> (NYC)</b><br>
-                - <b><i>The Green Project </i>(New Orleans, LA)</b><br>
-                - <b><i>Frank’s Chop Shop </i>(Rochester, NY)</b><br>
-                - <b><i>The Yards Art Collective</i> (Rochester, NY)</b><br>
-                - <b><i>The Dewey Endowment for Writing, Creative Representation, and Expressive Works </i>(Virginia Beach, VA)</b>
+                - <b><i>Christie’s Auction House - Rockefeller Center</i></b>(NYC)<br>
+                - <b><i>The Green Project </i></b>(New Orleans, LA)<br>
+                - <b><i>Frank’s Chop Shop </i></b>(Rochester, NY)<br>
+                - <b><i>The Yards Art Collective</i></b>(Rochester, NY)<br>
+                - <b><i>The Dewey Endowment for Writing, Creative Representation, and Expressive Works</i></b>(Virginia Beach, VA)
                  </p></div>
         <div id="contact-us-card" class="card">
            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdN5JThh9hboiCTqLQVzzNqNLVO8n0AqLEsxLY9_Z5EXrfx0w/viewform?embedded=true" width="400" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
