--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
             <p>20 years of comprehensive experience facilitating the organization, curation, and installation of art events.
                 I have hung or installed many different types of art (values > $1million) in various settings including: 
                 galleries, private residences, art fairs, and businesses.<br><br>
-                Worked with organizations like:<br>
+                <u><b>Organizations we've worked with:</b></u><br>
                 <ul class="grid-list">
-                    <li><b><i>Christie’s Auction House - Rockefeller Center</i></b>(NYC)</li>
-                    <li><b><i>The Green Project </i></b>(New Orleans, LA)</li>
-                    <li><b><i>Frank’s Chop Shop </i></b>(Rochester, NY)</li>
-                    <li><b><i>The Yards Art Collective</i></b>(Rochester, NY)</li>
-                    <li><b><i>The Dewey Endowment for Writing, Creative Representation, and Expressive Works</i></b>(Virginia Beach, VA)</li>
+                    <li><b><i>Christie’s Auction House - Rockefeller Center</i></b> (NYC)</li>
+                    <li><b><i>The Green Project </i></b> (New Orleans, LA)</li>
+                    <li><b><i>Frank’s Chop Shop </i></b> (Rochester, NY)</li>
+                    <li><b><i>The Yards Art Collective</i></b> (Rochester, NY)</li>
+                    <li><b><i>The Dewey Endowment for Writing, Creative Representation, and Expressive Works</i></b>(Virginia Beach, VA) </li>
                 </ul>
                  </p></div>
         <div id="contact-us-card" class="card">
