--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <li>Framing & Stretching</li>
                 </ul>
             </li>
-            <li id="about-us-menu">About Us</li>
-            <li id="contact-us-menu">Contact Us</li>
+            <li id="about-us-menu">History</li>
+            <li id="contact-us-menu">Contact</li>
         </ul>
     </div>
 
@@ -111,7 +111,7 @@
         </p></div>
 
         <div id="about-us-card" class="card">
-            <h2>About Us</h2>
+            <h2>History</h2>
             <p>20 years of comprehensive experience facilitating the organization, curation, and installation of art events.
                 I have hung or installed many different types of art (values > $1million) in various settings including: 
                 galleries, private residences, art fairs, and businesses.<br><br>
