--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Horizontal Menu -->
     <div id="menu-tray">
         <ul>
-            <li id="services-menu">Services
+            <li id="services-menu"><h5>Services</h5>
                 <ul id="services-submenu">
                     <li>Installation & De-Installation</li>
                     <li>Curation, Packaging</li>
@@ -25,8 +25,8 @@
                     <li>Framing & Stretching</li>
                 </ul>
             </li>
-            <li id="about-us-menu">History</li>
-            <li id="contact-us-menu">Contact</li>
+            <li id="about-us-menu"><h5>History</h5></li>
+            <li id="contact-us-menu"><h5>Contact</h5></li>
         </ul>
     </div>
 
